--- a/ptp_rus/localisation/replace/modifiers_ptp_combined_l_russian.yml
+++ b/ptp_rus/localisation/replace/modifiers_ptp_combined_l_russian.yml
@@ -398,6 +398,8 @@ mod_planet_jobs_worker_engineering_research_produces_mult:0 "£engineering_resea
 mod_planet_doctors_society_research_produces_add: "£society_research£ $society_research$ от £job_healthcare£ $job_healthcare_plural$"
 mod_planet_culture_workers_society_research_produces_add: "£society_research£ $society_research$ от £job_culture_worker£ $job_culture_worker_plural$"
 mod_planet_priests_society_research_produces_add: "£society_research£ $society_research$ от £job_priest£ $job_priest_plural$"
+mod_planet_priests_physics_research_produces_add: "£physics_research£ $physics_research$ от £job_priest£ $job_priest_plural$"
+mod_planet_priests_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_priest£ $job_priest_plural$"
 mod_planet_telepaths_society_research_produces_add: "£society_research£ $society_research$ от £job_enforcer£ $job_enforcer_plural$"
 mod_planet_evaluators_physics_research_produces_add: "£physics_research£ $physics_research$ от £job_evaluator£ $job_evaluator_plural$"
 mod_planet_pop_assemblers_engineering_research_produces_add: "£engineering_research£ $engineering_research$ от £job_roboticist£ $planet_pop_assemblers$"
