--- a/ptp_rus/localisation/russian/fatalf_l_russian.yml
+++ b/ptp_rus/localisation/russian/fatalf_l_russian.yml
@@ -1,45 +1,45 @@
 ﻿l_russian:
  LOST_DESIRE_PROJECT: "Изучить храм"
- LOST_DESIRE_PROJECT_DESC: "Загадочный храм появился на [desire_planet_1.GetName]. Мы думаем, что это как-то связано с найденными нами координатами. Мы должны исследовать это как можно скорее."
+ LOST_DESIRE_PROJECT_DESC: "Загадочный храм появился на [desire_planet_1.GetName]. Мы думаем, что это как-то связано с найденными нами координатами. Мы должны исследовать его как можно быстрее."
  WHITE_HOLE_STUDY: "Изучить аномалию"
- WHITE_HOLE_STUDY_DESC: "Электромагнитная аномалия стабилизировалась над [Root.GetName]. Мы должны изучить её и найти возможный способ закрыть её, прежде чем она исчезнет."
- desire_desc: "Найденные нами координаты указывают на эту планету. Мы должны колонизировать её и посмотреть, что произойдет."
+ WHITE_HOLE_STUDY_DESC: "Электромагнитная аномалия стабилизировалась над [Root.GetName]. Мы должны изучить её и найти способ закрыть, прежде чем она исчезнет."
+ desire_desc: "Найденные нами координаты указывают на эту планету. Мы должны колонизировать её и посмотреть, что произойдёт."
  desire_name: "Древние директивы"
- fatalf.001.a: "$country.1000.a$"
- fatalf.001.desc_a: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который транслировал первые 112 цифр числа Пи. Теперь это просто металлолом."
- fatalf.001.desc_b: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который транслировал популярную мелодию [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
- fatalf.001.desc_c: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который транслировал короткую историю любви двух любовников с двух разных звёзд. Теперь это просто металлолом."
- fatalf.001.desc_d: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который транслировал класический военный распев [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
- fatalf.001.desc_e: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который имел передатчик, но не транслировал ничего. Теперь это просто металлолом."
- fatalf.001.desc_f: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд произоводства [Root.Owner.GetSpeciesAdj], который транслировал клиническое описание тела [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
+ fatalf.001.a: "Как странно."
+ fatalf.001.desc_a: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который транслировал первые 112 цифр числа Пи. Теперь это просто металлолом."
+ fatalf.001.desc_b: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который транслировал популярную мелодию [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
+ fatalf.001.desc_c: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который транслировал короткую историю любви двух влюблённых с двух разных звёзд. Теперь это просто металлолом."
+ fatalf.001.desc_d: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который транслировал классический военный распев [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
+ fatalf.001.desc_e: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который имел передатчик, но не транслировал ничего. Теперь это просто металлолом."
+ fatalf.001.desc_f: "[Root.GetName] сообщает, что их датчики обнаружили странные энергетические сигнатуры за секунду до того, как они столкнулись с чем-то маленьким. Более тщательная проверка показала, что это был зонд производства [Root.Owner.GetSpeciesAdj], который транслировал описание анатомического строения тела [Root.Owner.GetSpeciesAdj]. Теперь это просто металлолом."
  fatalf.001.name: "Странный зонд"
- fatalf.003.desc: "Знакомые всплески энергии обнаружены вблизи [Root.GetName]. Вы опасаетесь худшего, но всё, что появляется, - это несколько тонн упакованного мяса, принадлежащего неизвестному виду птиц. По всем данным, это можно есть без вреда."
+ fatalf.003.desc: "Знакомые всплески энергии обнаружены вблизи [Root.GetName]. Мы опасались худшего, но всё, что появилось, - это несколько тонн упакованного мяса неизвестного нам вида птиц. По всем данным, это можно есть без вреда."
  fatalf.003.title: "Замороженная пища"
- fatalf.004.desc: "Ваши планетарные датчики показывают чрезвычайно высокие показания излучения на низкой орбите [Root.GetName]. Они имеют сигнал, аналогичный предыдущему необъяснимому явлению. Прежде чем вы попытались выяснить, что это, большой взрыв раздался на большом участке колонизированной территории, уничтожая на своём пути любых людей и все здания."  
+ fatalf.004.desc: "Наши планетарные датчики зафиксировали чрезвычайно мощные показания излучения на низкой орбите [Root.GetName]. Оно имеют сигнал, аналогичный предшествующему. Прежде чем мы попытались выяснить, что это было, произошёл большой взрыв на участке колонизированной территории, который уничтожил всё - существ, здания, ландшафт."
  fatalf.004.title: "Неизвестная бомба"
- fatalf.005.desc: "Небольшой астероид появился на орбите [Root.GetName]. Его не было видно до того момента, несколько минут назад, когда мы обнаружили его вместе со знакомым сигналом энергии. Хотя он слишком мал, чтобы нанести какой-либо урон, он может обеспечить нас большим количеством полезных ископаемых." 
+ fatalf.005.desc: "Небольшой астероид появился на орбите [Root.GetName] всего несколько минут назад неизвестно откуда. Мы обнаружили его по характерному и знакомому нам излучению. Хотя он слишком мал, чтобы нанести какой-либо урон, он может обеспечить нас большим количеством минералов."
  fatalf.005.title: "Экстрамерный астероид"
- fatalf.006.desc: "Серия больших импульсов постоянной энергии по неизвестной причине ослабляет магнитное поле [Root.GetName]. Хотя это не смертельно, это делает повседневную жизнь довольно неудобной."
+ fatalf.006.desc: "Серия больших импульсов постоянной энергии по неизвестной нам причине ослабляет магнитное поле [Root.GetName]. Хоть это и не смертельно, но повседневную жизнь осложнит."
  fatalf.006.title: "Электромагнитный импульс"
- fatalf.007.desc: "Небольшой портал открылся в небе над [Root.GetName]. Хотя мы не можем видеть сквозь него, он изверг странный разрушенный зонд, который может позволить нам провести полезные исследования." 
+ fatalf.007.desc: "Небольшой портал открылся над [Root.GetName]. Из него появился странный разрушенный зонд, благодаря которому мы можем провести полезные исследования."
  fatalf.007.title: "Странные записи"
- fatalf.008.desc: "Вы обнаруживаете большие энергетические сигнатуры на низкой орбите [Root.GetName]. Почти сразу же световые удары распространяются по всей планете, испаряя многочисленных гражданских. Было ли это вызвано тем же эффектом, который материализовал нам странный зонд?" 
+ fatalf.008.desc: "Мы обнаружили большие энергетические сигнатуры на низкой орбите [Root.GetName]. В тот же миг по всей планете прокатились световые удары, испаряющие многочисленное население планеты. Было ли это вызвано тем же эффектом, который материализовал нам странный зонд?"
  fatalf.008.title: "Быстрые энергоудары"
- fatalf.009.desc: "Одновременно каждый датчик в вашей империи обнаруживает чрезвычайно большую энергетическую аномалию, расположенную прямо над вашей столицей. Ваши датчики дают те же показания, которые были обнаружены на разрушенном зонде. Так же быстро, как и появилось, он рассеивается без видимого эффекта." 
+ fatalf.009.desc: "Одновременно все датчики нашей империи фиксируют чрезвычайно большую энергетическую аномалию, которая появилась прямо над вашей столицей. Датчики показывают, что энергетический след совпадает с тем, который мы зафиксировали при появлении разрушенного зонда некоторое время назад. Спустя мгновения и аномалия рассеивается так же быстро, как и появилось, не оставив после себя ничего."
  fatalf.009.title: "Ничего?"
- fatalf.010.desc: "Когда ваши корабли приблизились для изучения, они увидели маленький разлом, плавающую в космосе. Ваши исследования показывают, что она стабилизировалась на орбите, достаточно, чтобы вы могли отправить маленький зонд, испускающий импульс определенного энергетического типа, вы можете закрыть его навсегда. Вы также можете сделать так, чтобы он передавал аудио, если кто-то найдет его."
- fatalf.011.desc: "Удивительно, но когда ваш зонд проходит через разрыв, на короткое время открывается небольшая червоточина. Наблюдая, как это влияет на перемещение и передачу нашего зонда, мы могли бы использовать эти знания, чтобы узнать секреты этих проходов."
+ fatalf.010.desc: "Когда наш корабль приблизился для изучения аномалии, он обнаружил маленький разлом. Наши исследования показывают, что он стабилизировался на орбите и мы можем отправить маленький зонд, испускающий импульс определенного энергетического типа, что бы закрыть его навсегда. Есть и другая альтернатива - мы можем сделать так, чтобы он передавал аудио, если кто-то его найдёт."
+ fatalf.011.desc: "Удивительно, но когда наш зонд прошёл через разрыв, на короткое время открылась небольшая червоточина. Изучая, этот феномен, мы могли бы использовать полученные знания, чтобы узнать секреты этих проходов."
  fatalf.011.title: "Стабилизация"
- fatalf.012.desc: "Ваш зонд проходит сквозь разрыв и посылает импульс, как и планировалось. Через несколько мгновений все общение теряется, поскольку разрыв сам запечатывается. Нам больше не придется об этом беспокоиться." 
+ fatalf.012.desc: "Наш зонд проходит сквозь разрыв и посылает, как и планировалось, импульс, после чего через несколько мгновений связь с зондом прерывается - разрыв запечатан. Нам больше не придётся об этом беспокоиться."
  fatalf.012.title: "Прощай надолго"
- fatalf.020.desc: "Во время осмотра [From.From.GetName], ваш научный корабль обнаруживает большой железный планшет, плавающую на орбите. На нем выгравированы направления на три планеты по всей галактике и серия пиктограмм, показывающих различные энергетические конвергенции на каждой. Цель этих конвергенций неизвестна, так как они не похожи ни на одно известное научное явление." 
+ fatalf.020.desc: "Во время осмотра [From.From.GetName], ваш научный корабль обнаруживает большой железный планшет, плавающую на орбите. На нем выгравированы направления на три планеты по всей галактике и серия пиктограмм, показывающих различные энергетические конвергенции на каждой. Цель этих конвергенций неизвестна, так как они не похожи ни на одно известное научное явление."
  fatalf.020.title: "Древние директивы"
- fatalf.022.desc: "Когда ваша колония опускается и начинает распространяться по планете, вы получаете сообщения о том, что в небе над [Root.GetName] появилась то, что описывается как множество «плавающих окон» . Хотя в настоящее время их много, некоторые постепенно исчезают." 
+ fatalf.022.desc: "Когда ваша колония опускается и начинает распространяться по планете, вы получаете сообщения о том, что в небе над [Root.GetName] появилась то, что описывается как множество «плавающих окон» . Хотя в настоящее время их много, некоторые постепенно исчезают."
  fatalf.022.title: "Плавающее окно"
- fatalf.023.desc: "По мере того, как ваши ученые начинают расследование, они отправляют отчеты о том, что эти окна на самом деле ведут в другие, альтернативные миры. Еще интереснее то, что ваше население на [Root.GetName] утверждает, что у каждого из них странные сны, и они просят только об одном. О нашем самом большом желании." 
+ fatalf.023.desc: "По мере того, как наши учёные проводят исследование, они отправляют отчёты о том, что эти окна на самом деле ведут в другие, альтернативные миры. Ещё интереснее то, что наше население на планете [Root.GetName] утверждает, что у каждого из них странные сны, они просят только об одном. О нашем самом сокровенном желании."
  fatalf.023.tip1: "Мы желаем §RБогатства.§!"
  fatalf.023.tip10: "Мы желаем §RМудрости.§!"
- fatalf.023.tip2: "Мы желаем §RМощи.§!"
+ fatalf.023.tip2: "Мы желаем §RВласти.§!"
  fatalf.023.tip3: "Мы желаем §RЦели.§!"
  fatalf.023.tip4: "Мы желаем §RСчастья.§!"
  fatalf.023.tip5: "Мы желаем §RЧистоты.§!"
@@ -48,33 +48,35 @@
  fatalf.023.tip8: "Мы желаем §RЛюбви.§!"
  fatalf.023.tip9: "Мы желаем §RЗнаний.§!"
  fatalf.023.title: "Проблески"
- fatalf.024.desc: "§EМЫ ПРЕДОСТАВЛЯЕМ ЗНАНИЯ. ТО, ЧТО ВЫ НАШЛИ ДО ЭТОГО, ОТКРЫЛОСЬ СЕЙЧАС. ПОКАЖИТЕ СВОЮ ЦЕННОСТЬ. ПУСТЬ ЛУЧШИЙ ИЗ ЭТОГО ЦИКЛА БУДЕТ ХУДШИМ СЛЕДУЮЩЕГО.§!" 
- fatalf.024.tip: "§RНЕ РАЗОЧАРУЙ§!"
+ fatalf.024.desc: "§EМЫ ПРЕДОСТАВЛЯЕМ ЗНАНИЯ. ТО, ЧТО ВЫ НАШЛИ ДО ЭТОГО, ОТКРЫЛОСЬ СЕЙЧАС. ПОКАЖИТЕ СВОЮ ЦЕННОСТЬ. ПУСТЬ ЛУЧШИЙ ИЗ ЭТОГО ЦИКЛА СТАНЕТ ХУДШИМ В СЛЕДУЮЩЕМ.§!"
+ fatalf.024.tip: "§RНЕ РАЗОЧАРУЙТЕ§!"
  fatalf.024.title: "ЦИКЛЫ"
- fatalf.0301.desc: "Большое возмущение пространства было одновременно обнаружено на всех наших датчиках. Мы не можем разобраться в том, что могло вызвать это, но мы знаем - что бы это ни было, ощущалось оно по всей галактике." 
+ fatalf.0301.desc: "Пространственные возмущения огромной силы были одновременно зафиксированы всеми нашими датчиками. Мы не можем понять, что это было, что могло вызвать такой всплеск, но мы уверены - что бы это ни было, ощущалось оно по всей галактике."
  fatalf.0301.name: "Реальность содрогается"
- fatalf.0302.desc: "Мы наблюдаем множество кораблей, похожих на сильно заросшие грибы, материализовавшихся по всей галактике. Они направляются ко всем близлежащим обитаемым планетам!"  
- fatalf.0302.name: "Мицелий"
- fatalf.0303.desc: "Поскольку наш флот уничтожил корабль-семя, он взорвался с потоком инфицированных спор." 
+ fatalf.0302.desc: "Мы наблюдаем множество кораблей, материализовавшихся по всей галактике. Они направляются ко всем близлежащим обитаемым планетам!" 
+ fatalf.0302.name: "Инфекционное разрастание"
+ fatalf.0303.desc: "Наш флот уничтожил корабль-семя, но при взрыве он распространил споры, которые могут инфицировать всё вокруг."
  fatalf.0303.name: "Корабли Мицелия"
- fatalf.0304.desc: "Когда корабль-семя прошёл над [Root.GetName], из него упали сотни крошечных спор, которые быстро превратились в ужасных монстров. Мы должны бороться с ними, если мы хотим спасти нашу колонию." 
+ fatalf.0304.desc: "Корабль-семя над планетой [Root.GetName] выпустил сотни крошечных спор, которые быстро превратились в ужасных монстров. Мы должны одержать над ними вверх, если хотим спасти нашу колонию."
  fatalf.0304.name: "Вторжение Мицелия"
- fatalf.0305.desc: "Мицелий был полностью ликвидирован на [Root.GetName]. Он не будет больше беспокоить нас здесь." 
- fatalf.0305.name: "Мицелий уничтожен"
- fatalf.100.desc: "После нескольких месяцев полной неосведомленности о происхождении этих странных предметов и загадок по типу почему они все имеют одну и ту же энергетическую сигнатуру, ваши дальнобойные сканеры обнаруживают, что странная аномалия появилась рядом с [Root.Owner.GetHomeWorldName] и что оно выпускает осколки льда с большой скоростью." 
+ fatalf.0305.desc: "Мицелий был полностью ликвидирован на [Root.GetName]. Здесь он нас больше не побеспокоит."
+ fatalf.0305.name: "Мицелий истреблён"
+ fatalf.100.desc: "После нескольких месяцев странных инцидентов, при которых появлялись не менее странные предметы, добавляющие новые вопросы, наши дальнобойные сканеры обнаружили, что странная аномалия с той же энергетической сигнатурой, появилась рядом с [Root.Owner.GetHomeWorldName]. Сканеры показывают, что она фактически обстреливает планету осколками льда."
  fatalf.100.name: "Раскол"
- fatalf_new_colony_desc: "Наш ученый обнаружил нестабильную червоточину, которая, по его словам, ведет к планете премиум-класса в другом месте. Если мы стабилизируем червоточину, мы сможем основать новую колонию."
+ fatalf_new_colony_desc: "Наш учёный обнаружил нестабильную червоточину, которая, по его словам, ведёт к планете, которая имеет отличные показатели. Если мы стабилизируем червоточину, то сможем основать новую колонию."
  fatalf_new_colony_title: "Блуждающая червоточина"
+ fatalf_seed_ship: "Корабль-семя"
+ fatalf_seed_ship_plural: "Корабли-семена"
  fatalf_stable_wormhole_name: "Стационарная червоточина"
- hyperlane_machine_desc: "L-Врата, похоже, как-то связаны с возмущением гиперкоридоров. Если мы или наши союзники будем контролировать их все, мы сможем найти источник проблемы."
+ hyperlane_machine_desc: "L-Врата, похоже, как-то связаны с этим возмущением. Если мы или наши союзники будем контролировать их все, мы сможем найти источник проблемы."
  hyperlane_machine_title: "Возмущение гиперкоридоров"
- lost_desire_desc: "Мы нашли галактические координаты, указывающие на несколько планет в нашей галактике. Нам обещали величайшее желание наших людей, если мы сделаем их своим домом."
+ lost_desire_desc: "Мы нашли координаты, указывающие на несколько планет в нашей галактике. Нам пообещали исполнить сокровенное желание, если мы сделаем их своим домом."
  lost_desire_title: "Потерянное желание"
  seed_army: "Семенная армия"
- seed_army_desc: "Неумолимая живая спора, которая заражает каждое живое существо, которого она касается."
+ seed_army_desc: "Споры, которые заражают всё живое, чего коснутся."
  seed_army_plural: "Семенные армии"
  seed_attack_desc: "Десятки инфицированных кораблей ворвались в нашу реальность! Мы должны уничтожить их, прежде чем они захватят наши планеты!"
- seed_attack_title: "Вторжение инфицированных"
+ seed_attack_title: "Мицелий"
  seed_poi: "Мы должны уничтожить этот корабль-семя, прежде чем он размножится."
  seed_ship: "Корабль-семя"
  seed_ship_plural: "Корабли-семена"
